[gd_scene load_steps=7 format=3 uid="uid://c77at2skcq0u1"]

[ext_resource type="PackedScene" uid="uid://btdffss434kcc" path="res://src/UI/panel_docker.tscn" id="1_e2b3k"]
[ext_resource type="PackedScene" uid="uid://dfuraxyvtrqks" path="res://src/UI/body_selection_styles.tscn" id="2_g1j7g"]
[ext_resource type="Script" path="res://src/UI/selection_styles_docker.gd" id="2_p05fh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee8xr"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h18c7"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_51nsx"]
content_margin_right = 6.0
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="SelectionStylesDocker" instance=ExtResource("1_e2b3k")]
offset_right = 286.0
offset_bottom = 380.0
script = ExtResource("2_p05fh")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/PanelContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer" index="0"]
layout_mode = 2
focus_mode = 2
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
selection_enabled = true
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Header" type="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
alignment = 2

[node name="AddButton" type="Button" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/Header" index="0"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ee8xr")
theme_override_styles/focus = SubResource("StyleBoxFlat_h18c7")
text = "+"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_51nsx")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/PanelContainer2" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="StylesVBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="BodySelectionStyles" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/StylesVBoxContainer" index="0" instance=ExtResource("2_g1j7g")]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/Header/AddButton" to="." method="_on_add_button_pressed"]
